--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "The Breads Factory is a factory that produces Programmed Bread (tokenized assets) with a Framework of Playing, Learning, and Working or PLW. Here's what's trying to be provided and built in...",
   "author": "Prof. NOTA",
-  "license": "MIT",
+  "license": "UNLICENSED - SEE LICENSE IN LICENSE",
   "receipt": {
     "codename": "ngelaras",
     "publisher": "NFT Indonesia"
@@ -20,6 +20,7 @@
     "crypto",
     "token",
     "dapp",
+    "myreceipt",
     "prof. nota inc."
   ],
   "scripts": {
@@ -31,23 +32,23 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "framer-motion": "^12.10.5",
-    "next": "15.3.2",
+    "framer-motion": "^12.23.0",
+    "next": "15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "thirdweb": "^5.98.0"
+    "thirdweb": "^5.105.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.0.10",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.30.1",
+    "eslint-config-next": "15.3.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
   "engines": {
