--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.0",
-    "next": "15.3.5",
+    "next": "16.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -46,13 +46,14 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.30.1",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=22.14.0",
-    "yarn": ">=1.22.0"
-  }
+    "node": ">=24.0.0",
+    "yarn": ">=4.0.0"
+  },
+  "packageManager": "yarn@4.12.0"
 }
