--- a/package.json
+++ b/package.json
@@ -31,26 +31,26 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "framer-motion": "^12.23.0",
-    "next": "16.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@vercel/analytics": "^1.6.1",
+    "framer-motion": "^12.25.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
-    "thirdweb": "^5.105.7"
+    "thirdweb": "^5.116.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "24.0.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.30.1",
-    "globals": "^15.0.0",
+    "@eslint/js": "^9.39.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "24.10.7",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/parser": "^8.52.0",
+    "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.3"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": "24.x",
